--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,7 +66,7 @@ ga('send', 'pageview');
 
 <!-- Begin Menu Navigation
 ================================================== -->
-<nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top mediumnavigation nav-down" style="border-bottom:1px solid var(--border-light);box-shadow:none;">
+<nav class="navbar navbar-expand-lg navbar-light fixed-top mediumnavigation nav-down">
 
     <div class="container pr-0" style="padding-left: 0 !important; padding-right: 0 !important;">
 
@@ -99,20 +99,6 @@ ga('send', 'pageview');
                 </li>
 
                 {% include search-lunr.html %}
-
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="langDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    {% if site.active_lang == 'en' %}English{% else %}한국어{% endif %}
-                  </a>
-                  <div class="dropdown-menu dropdown-menu-right" aria-labelledby="langDropdown">
-                    {% if site.active_lang != 'ko' %}
-                    <a class="dropdown-item" href="{{ site.baseurl }}{{ page.url | replace_first: '/en', '' }}">한국어</a>
-                    {% endif %}
-                    {% if site.active_lang != 'en' %}
-                    <a class="dropdown-item" href="{{ site.baseurl }}/en{{ page.url }}">English</a>
-                    {% endif %}
-                  </div>
-                </li>
             </ul>
 
         <!-- End Menu -->
