--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,7 +71,7 @@ ga('send', 'pageview');
     <div class="container pr-0" style="padding-left: 0 !important; padding-right: 0 !important;">
 
     <!-- Begin Logo -->
-    <a class="navbar-brand" href="{{ site.baseurl }}/">
+    <a class="navbar-brand d-lg-none" href="{{ site.baseurl }}/">
     Seonghu Jeon
     </a>
     <!-- End Logo -->
@@ -80,24 +80,32 @@ ga('send', 'pageview');
     <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarMediumish">
+    <div class="collapse navbar-collapse position-relative" id="navbarMediumish">
 
         <!-- Begin Menu -->
 
-            <ul class="navbar-nav ml-auto">
+            <ul class="navbar-nav main-menu mx-auto">
+
+                <li class="nav-item d-none d-lg-flex">
+                <a class="nav-link font-weight-bold text-dark" href="{{ site.baseurl }}/">Seonghu Jeon</a>
+                </li>
 
                 {% if page.url == "/" %}
                 <li class="nav-item active">
                 {% else %}
                 <li class="nav-item">
                 {% endif %}
-                <a class="nav-link" href="{{ site.baseurl }}/">Blog</a>
+                <a class="nav-link" href="{{ site.baseurl }}/">Home</a>
                 </li>
 
                 <li class="nav-item">
                 <a class="nav-link" href="{{ site.baseurl }}/about-me">About</a>
                 </li>
 
+            </ul>
+
+            <!-- Search -->
+            <ul class="navbar-nav">
                 {% include search-lunr.html %}
             </ul>
 
