--- a/_includes/search-lunr.html
+++ b/_includes/search-lunr.html
@@ -295,7 +295,7 @@ body.modal-open {
     <form class="bd-search" onSubmit="fuseSearch(document.getElementById('lunrsearch').value, event); return false;">
         <div class="search-wrapper">
             <i class="fas fa-search search-icon"></i>
-            <input type="text" class="form-control text-small launch-modal-search" id="lunrsearch" name="q" maxlength="255" value="" placeholder="{% if site.active_lang == 'en' %}Search...{% else %}검색...{% endif %}"/>
+            <input type="text" class="form-control text-small launch-modal-search" id="lunrsearch" name="q" maxlength="255" value="" placeholder="검색..."/>
         </div>
     </form>
 </li>
