--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
     }
 </style>
 
-<title>{% if site.active_lang == 'en' %}{{ page.title }} | {{site.name}}{% else %}{{ page.title }} | {{site.name}}{% endif %}</title>
+<title>{{ page.title }} | {{site.name}}</title>
 
 {% seo %}
 
